--- a/04-input_output.Rmd
+++ b/04-input_output.Rmd
@@ -1,6 +1,6 @@
 # Input and Output {#InputOuput}
 
-## Download and load libraries {-}
+## Download and load packages {-}
 
 ```{r, message=FALSE, warning=FALSE}
 
