--- a/06-barplot.Rmd
+++ b/06-barplot.Rmd
@@ -125,7 +125,7 @@ ggplot(dat) +
 
 ### Discussion
 
-In the variable `side`, there are three values - `c`, `l`, `r`. How does R know if the `red` is for what value, and ditto for other colors. Well, if you did not specify the levels, it goes in alphabetical order. So `"red"`" is for `c`, and `"green"` is for `r`. See Recipe \@ref(WRANGLE-CHARACTERS-2-FACTORS) for how to change the order of levels in a factor. There are plethora of color names that is availabe in R and that you can select to be used in `scale_fill_manual` (Figure \@ref(fig:FIG-COLOR-NAMES)).
+In the variable `side`, there are three values - `c`, `l`, `r`. How does R know if `red` is for what value, and ditto for other colors. Well, if you did not specify the levels, it goes in alphabetical order. So `"red"`" is for `c`, and `"green"` is for `r`. See Recipe \@ref(WRANGLE-CHARACTERS-2-FACTORS) for how to change the order of levels in a factor. There are plethora of color names that is availabe in R and that you can select to be used in `scale_fill_manual` (Figure \@ref(fig:FIG-COLOR-NAMES)).
 ```{r FIG-COLOR-NAMES, echo=FALSE, fig.align='center', fig.cap="Names of many colors available in R.", fig.height=15}
 knitr::include_graphics(c("images/chapter-6/color_names.png"))
 ```
@@ -199,7 +199,7 @@ You want to create a bitmap of your plot, writing to a PNG file.
 
 ### Solution
 
-We will be using `ggsave()`. First we need to assign the gplot we created with `ggplot()` to an object, which we can name anything. Here we call the object simply `f`. There are several important arguments you need. `filename` is the name of the file and extension you want your image to be called. Here we will use `filename = "my_plot.png"`. `plot` is the specific figure you want to save. Hwere we will use `plot = f`. `width` and `height` allows you to specify how big your image is. `unit` is whether your `width` and `height` are defined in centimeters, `"cm"`, or inches, `"in"`. Here I will use `units = "cm"`, and a 8 cm by 4 cm `width` and `height`, respectively. Lastly, the `dpi` argument specifies the resoultion of the image. Here we use `dpi = 300`. The file is saved to the working directory of the session.
+We will be using `ggsave()`. First we need to assign the gplot we created with `ggplot()` to an object, which we can name anything. Here we call the object simply `f`. There are several important arguments you need. `filename` is the name of the file and extension you want your image to be called. Here we will use `filename = "my_plot.png"`. `plot` is the specific figure you want to save. Here we will use `plot = f`. `width` and `height` allows you to specify how big your image is. `unit` is whether your `width` and `height` are defined in centimeters, `"cm"`, or inches, `"in"`. Here I will use `units = "cm"`, and a 8 cm by 4 cm `width` and `height`, respectively. Lastly, the `dpi` argument specifies the resoultion of the image. Here we use `dpi = 300`. The file is saved to the working directory of the session.
 
 ```{r eval=FALSE}
 f <- ggplot(dat) +
